<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:gravity="center"
    android:background="@android:color/darker_gray"
    android:layout_height="wrap_content" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_record_item"
        android:layout_width="match_parent"

        android:background="@drawable/background_black_border"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/contact_name"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/contact_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/contact_number"
            android:background="@drawable/veritcal_line"
            app:layout_constraintHorizontal_weight="1.1"/>

        <TextView
            android:id="@+id/contact_number"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/contact_number"
            app:layout_constraintRight_toLeftOf="@+id/info"
            app:layout_constraintLeft_toRightOf="@+id/contact_name"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/veritcal_line"
            app:layout_constraintHorizontal_weight="1.5"/>




        <TextView
            android:id="@+id/info"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_margin="5dp"
            android:text="@string/user_info"
            android:textColor="@color/black"
            app:layout_constraintLeft_toRightOf="@+id/contact_number"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_weight="0.7">


        </TextView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>